--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
   <meta charset="utf-8">
   <title>🏩Muttu's personal site</title>
 </head>
-
-<body>
+  <body style="background-color:gold;">
   <table cellspacing="20">
     <tr>
       <td><img src="Muttu.jpg" alt="Hanamantray profile" width="200" height="200"></td>
